fix: navbar-close-btn spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,7 +158,7 @@ p {
 
 .navbar-close-btn {
   display:hidden;
-  padding-top: 10px;
+  padding-top: 15px;
   padding-right: 15px;
 }
 
